<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:paddingTop="@dimen/dimen_5_dp"
        android:paddingBottom="@dimen/dimen_5_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg"
        android:paddingRight="@dimen/dimen_10_dp"
        android:paddingLeft="@dimen/dimen_10_dp">

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/dimen_10_dp"
            android:text="@string/cancle"
            android:textColor="@color/color_black_363C44"
            android:textSize="@dimen/dimen_14_sp" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title"
            android:textColor="@color/color_black_363C44"
            android:textSize="@dimen/dimen_16_sp" />


        <TextView
            android:id="@+id/tv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dimen_10_dp"
            android:text="@string/commit"
            android:textColor="@color/color_black_363C44"
            android:textSize="@dimen/dimen_14_sp" />

    </RelativeLayout>


    <RelativeLayout
        android:background="@color/color_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_5_dp"
            android:background="@color/color_bg"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_15_dp"
            android:paddingLeft="@dimen/dimen_20_dp"
            android:paddingRight="@dimen/dimen_20_dp"
            android:paddingTop="@dimen/dimen_15_sp">

            <com.zhd.mswcs.common.weidgt.datepicker.DatePickerView
                android:id="@+id/year_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/color_unit"
                android:textSize="@dimen/dimen_18_sp" />

            <com.zhd.mswcs.common.weidgt.datepicker.DatePickerView
                android:id="@+id/month_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="@color/color_unit"
                android:textSize="@dimen/dimen_18_sp" />

            <com.zhd.mswcs.common.weidgt.datepicker.DatePickerView
                android:id="@+id/day_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day"
                android:textColor="@color/color_unit"
                android:textSize="@dimen/dimen_18_sp" />

            <com.zhd.mswcs.common.weidgt.datepicker.DatePickerView
                android:id="@+id/hour_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/hour_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour"
                android:textColor="@color/color_unit"
                android:textSize="@dimen/dimen_18_sp" />

            <com.zhd.mswcs.common.weidgt.datepicker.DatePickerView
                android:id="@+id/minute_pv"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/minute_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minute"
                android:textColor="@color/color_unit"
                android:textSize="@dimen/dimen_18_sp" />

        </LinearLayout>

    </RelativeLayout>



</LinearLayout>